# codestral_benchmarking

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
Query scripts/: complex_query.py  general_script_1.py  general_script_2.py  general_script_3.py  high_query.py  medium_query.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/codestral_benchmarking/: __init__.py  cli.py
tests/: __init__.py  test_codestral_benchmarking.py
