[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codestral_benchmarking"
version = "0.1.0"
description = "Running codestral model locally and measure time to takens for complex queries"
readme = "README.rst"
authors = [
  {name = "Dipanwita", email = "dipanwitamallick2015@gmail.com"}
]
maintainers = [
  {name = "Dipanwita", email = "dipanwitamallick2015@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/dipanwita2019/codestral_benchmarking/issues"
changelog = "https://github.com/dipanwita2019/codestral_benchmarking/blob/master/changelog.md"
homepage = "https://github.com/dipanwita2019/codestral_benchmarking"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

